--- a/Space/Olbers-Paradox-Why-is-the-Night-Sky-Dark.html
+++ b/Space/Olbers-Paradox-Why-is-the-Night-Sky-Dark.html
@@ -17,32 +17,37 @@
   <meta name="twitter:description" content="Why is the Night Sky Dark instead of Bright while other stars are still present? Here, we deal with the Olber's or The Night Sky Paradox...">
   <meta name="twitter:image" content="">
   <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-  <style>
-    /* Background styles */
-body {
-    background-image: url('https://unsplash.com/photos/Oze6U2m1oYU/download?force=true');
-    background-size: 100% 100%;
-}
-
-bgbgeffect {
-    background: rgba(255,255,255,0.25);
-    -webkit-backdrop-filter: blur(15px);
-    backdrop-filter: blur(15px);
-    border: 1px solid rgba(255,255,255,0.125);
-    border-radius: 10px;
-}
-  </style>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 <body>
-<section class="body-font">
-  <div class="bgbgeffect container mx-auto flex flex-col px-5 py-24 justify-center items-center">
-    <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
-    <div class="w-full md:w-2/3 flex flex-col mb-16 items-center text-center">
-      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium">Olber's Paradox | Why is the Night Sky Dark?</h1>
-      <p class="mb-8 leading-relaxed">Why is the Night Sky Dark instead of Bright while other stars are still present? Here, we deal with the Olber's or The Night Sky Paradox...</p>
-    </div>
-  </div>
-</section>
+  <style>
+	@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500&display=swap');
+
+	* {
+		font-family: 'Noto Sans JP', sans-serif;
+	}
+
+	.bg-app {
+		background-image: url('https://images.unsplash.com/photo-1589070127509-ea788341cc5b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=889&q=80');
+	}
+</style>
+<div class="flex flex-row justify-center items-center min-h-screen bg-app bg-center bg-no-repeat bg-cover">
+	<main
+		class="flex flex-col lg:flex-row bg-white backdrop-filter backdrop-blur-lg bg-opacity-20 rounded-xl overflow-hidden w-full max-w-5xl shadow-lg m-4 lg:m-6">
+		<div class="flex-1 p-4 lg:p-6">
+			<div class="text-lg text-white mb-8 flex items-center">
+				<section class="body-font">
+          <div class="bgbgeffect container mx-auto flex flex-col px-5 py-24 justify-center items-center">
+              <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
+              <div class="w-full md:w-2/3 flex flex-col mb-16 items-center text-center">
+                  <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium">Olber's Paradox | Why is the Night Sky Dark?</h1>
+                  <p class="mb-8 leading-relaxed">Why is the Night Sky Dark instead of Bright while other stars are still present? Here, we deal with the Olber's or The Night Sky Paradox...</p>
+              </div>
+          </div>
+        </section>
+			</div>
+		</div>
+	</main>
+</div>
 <body>
 </html>
