--- a/Space/my-template-try.html
+++ b/Space/my-template-try.html
@@ -10,7 +10,7 @@
   <div class="max-w-4xl mx-auto py-12 px-4">
     <div class="bg-white rounded-lg shadow-lg overflow-hidden">
       <div class="px-6 py-12">
-        <h2 class="text-3xl font-bold text-gray-800 mb-8">Why We Love Space & Astronomy</h2>
+        <h1 class="text-3xl font-bold text-gray-800 mb-8">Why We Love Space & Astronomy</h1>
         <p class="text-gray-600 text-base mb-8">Space and astronomy have always captured the imagination of humans, from ancient civilizations gazing up at the stars to modern day spacecraft exploring the furthest reaches of our solar system.</p>
         <div class="my-8">
             <img class="rounded-lg shadow-lg" src="https://via.placeholder.com/800x400" alt="Post image">
@@ -27,31 +27,31 @@
         </div>
         <br>
         <br>
-        <h3><b>1. The Endless Mystries</b></h3>
+        <h2><b>1. The Endless Mystries</b></h2>
         <div class="text-gray-700 text-base leading-relaxed">
           <p>There is still so much we don't know about the universe, from the nature of dark matter and dark energy to the possibility of extraterrestrial life. Every new discovery brings us one step closer to understanding the mysteries of the cosmos, and it's exciting to think about what we might learn next.</p>
         </div>
         <br>
         <br>
-        <h3><b>2. The Breathtaking beauty</b></h3>
+        <h2><b>2. The Breathtaking beauty</b></h2>
         <div class="text-gray-700 text-base leading-relaxed">
           <p>From the glowing bands of the Milky Way to the swirling clouds of a distant nebula, space is filled with breathtakingly beautiful sights. Astronomy allows us to appreciate the beauty of the universe in a way that we can't when we're stuck on the surface of our own planet.</p>
         </div>
         <br>
         <br>
-        <h3><b>3. The sense of Wonder & Inspiration</b></h3>
+        <h2><b>3. The sense of Wonder & Inspiration</b></h2>
         <div class="text-gray-700 text-base leading-relaxed">
-          <p>Looking up at the stars on a clear night can be a humbling experience, reminding us of our place in the grand scheme of things. It's easy to feel small and insignificant when faced with the vastness of space, but that can also be incredibly inspiring. The universe is an endless source of inspiration, and it's no wonder that so many artists, writers, and scientists have been inspired by it.</p>
+          <p>Looking up at the stars on a clear night can be a humbling experience, reminding us of our place in the grand scheme of things. It's easy to feel small and insignificant when faced with the vastness of space, but that can also be incredibly inspiring. The universe is an endless source of inspiration, and it's no wonder that so many artists, writers, scientists and we have been inspired by it.</p>
         </div>
         <br>
         <br>
-        <h3><b>4.The Practical Applications</b></h3>
+        <h2><b>4.The Practical Applications</b></h2>
         <div class="text-gray-700 text-base leading-relaxed">
           <p>While space exploration is often seen as a luxury, it actually has numerous practical applications. For example, satellite technology is used for everything from GPS navigation to weather forecasting to telecommunications. Astronomy also helps us understand more about our own planet and how it fits into the larger universe.</p>
         </div>
         <br>
         <br>
-        <h3><b>5. The Potential for Adventure</b></h3>
+        <h2><b>5. The Potential for Adventure</b></h2>
         <div class="text-gray-700 text-base leading-relaxed">
           <p>Finally, space and astronomy offer the possibility for adventure and exploration. From astronauts venturing into the void of space to scientists probing the secrets of the cosmos, there are endless opportunities for those who are daring enough to take them.</p>
         </div>
