--- a/Space/exploring-exoplanets-comprehensive-guide-extrasolar-planets.html
+++ b/Space/exploring-exoplanets-comprehensive-guide-extrasolar-planets.html
@@ -15,27 +15,21 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
   <body>
-    <div class="bg-gray-200 rounded-lg shadow-lg p-6">
-  <h1 class="text-2xl font-bold text-gray-700">
-    Exploring Exoplanets: A Comprehensive Guide to Extrasolar Planets
-  </h1>
-  <p class="text-gray-700 mb-4">
-    Exoplanets, or extrasolar planets, are planets that orbit stars outside of our solar system. In this article, we provide an introduction to exoplanets, including how they are detected and the unique characteristics of these distant worlds.
-  </p>
-  <div class="bg-gray-300 rounded-lg p-4 mb-4">
-    <h2 class="text-xl font-bold text-gray-700">How are Exoplanets Detected?</h2>
-    <p class="text-gray-700 mb-4">
-      There are several methods for detecting exoplanets, including the transit method and the radial velocity method. The transit method looks for a dip in the brightness of a star as an exoplanet passes in front of it, while the radial velocity method measures the slight wobble of a star caused by the gravitational pull of an orbiting exoplanet.
-    </p>
+    <div class="container mx-auto px-6 py-8">
+  <h1 class="text-3xl font-bold mb-4">Blog Post Title</h1>
+  <div class="mb-4 flex items-center">
+    <img class="w-12 h-12 rounded-full" src="https://randomuser.me/api/portraits/men/1.jpg" alt="Author Name">
+    <div class="ml-3">
+      <p class="text-sm font-bold mb-1">Author Name</p>
+      <p class="text-xs text-gray-500">Date</p>
+    </div>
   </div>
-  <div class="bg-gray-300 rounded-lg p-4 mb-4">
-    <h2 class="text-xl font-bold text-gray-700">What Makes Exoplanets Unique?</h2>
-    <p class="text-gray-700 mb-4">
-      Exoplanets come in a wide variety of sizes, masses, and orbits, and they can be found in nearly every type of planetary system. Some exoplanets are similar to the planets in our solar system, while others are much larger or smaller and have orbits that are much more eccentric.
-    </p>
+  <div class="neomorph-bg-blue-500 rounded-md shadow-lg p-4">
+    <p class="text-lg mb-4">Blog post intro goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra auctor urna, eu lobortis tortor cursus in. Proin ullamcorper, velit vel consectetur viverra, dui dui venenatis risus, in scelerisque dolor libero in elit. Aliquam placerat rhoncus tortor eget condimentum. Maecenas quis elementum metus. Aliquam erat volutpat.</p>
+    <h2 class="text-2xl font-bold mb-4">Blog post section title</h2>
+    <p class="text-lg mb-4">Blog post content goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam viverra auctor urna, eu lobortis tortor cursus in. Proin ullamcorper, velit vel consectetur viverra, dui dui venenatis risus, in scelerisque dolor libero in elit. Aliquam placerat rhoncus tortor eget condimentum. Maecenas quis elementum metus. Aliquam erat volutpat.</p>
   </div>
-  <!-- Additional content goes here -->
-  </div>
-</body>
+</div>
+  </body>
 </html>
   
