--- a/Space/why-we-love-space-astronomy.html
+++ b/Space/why-we-love-space-astronomy.html
@@ -13,7 +13,20 @@
     <div class="flex items-center">
       <a href="#" class="dark: px-3 py-2 rounded-lg text-white hover:bg-gray-700 mr-4">Home</a>
       <a href="#" class="dark: px-3 py-2 rounded-lg text-white hover:bg-gray-700 mr-4">About</a>
-      <a href="#" class="dark: px-3 py-2 rounded-lg text-white hover:bg-gray-700 mr-4">Telegram Channel</a>
+      <a href="#" class="dark: px-3 py-2 rounded-lg text-white hover:bg-gray-700 mr-4">Telegram Channel</a
+      <button id="dark-mode-toggle">Toggle Dark Mode</button>
+        <style>
+          /* light color scheme styles here */
+          .dark-mode {
+          /* dark color scheme styles here */
+          }
+        </style>
+        <script>
+          const toggle = document.getElementById('dark-mode-toggle');
+          toggle.addEventListener('click', () => {
+          document.body.classList.toggle('dark-mode');
+        });
+        </script>
     </div>
   </div>
   </nav>
