--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ The next-science project, with so much knowledge for amateurs to professionals, 
           <div class="flex-grow">
             <h2 class="text-white text-lg title-font font-medium mb-3">Physics</h2>
             <p class="leading-relaxed text-base">Is physics physically present? Let's find out!</p>
-            <a class="mt-3 text-indigo-400 inline-flex items-center">Learn More
+            <a class="mt-3 text-indigo-400 inline-flex items-center" href="Physics/index.html">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
               </svg>
@@ -82,7 +82,7 @@ The next-science project, with so much knowledge for amateurs to professionals, 
           <div class="flex-grow">
             <h2 class="text-white text-lg title-font font-medium mb-3">Technology</h2>
             <p class="leading-relaxed text-base">We have been Tech Savvy since birth! Have you?</p>
-            <a class="mt-3 text-indigo-400 inline-flex items-center">Learn More
+            <a class="mt-3 text-indigo-400 inline-flex items-center" href="Technology/index.html">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
               </svg>
@@ -95,7 +95,7 @@ The next-science project, with so much knowledge for amateurs to professionals, 
           <div class="flex-grow">
             <h2 class="text-white text-lg title-font font-medium mb-3">Chemistry</h2>
             <p class="leading-relaxed text-base">Chemicals, Our Friends from a mole to a kilogram!</p>
-            <a class="mt-3 text-indigo-400 inline-flex items-center">Learn More
+            <a class="mt-3 text-indigo-400 inline-flex items-center" href="Chemistry/index.html">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
               </svg>
