--- a/Space/index.html
+++ b/Space/index.html
@@ -40,7 +40,7 @@
 }
   </style>
 </head>
-<body class="bg-gray-900">
+<body class="bg-gray-900 bg-center bg-no-repeat bg-cover bg-fixed" style="background-image: url('images/bg.jpg')">
 <div class="relative flex min-h-screen flex-col justify-center overflow-hidden p-6 sm:py-12">
   <div class="container px-5 py-24 mx-auto bg-gray-900">
     <div class="flex flex-wrap w-full mb-20 flex-col items-center text-center">
