--- a/Space/index.html
+++ b/Space/index.html
@@ -42,18 +42,18 @@
 </head>
 <body class="bg-center bg-no-repeat bg-cover bg-fixed" style="background-image: url('https://raw.githubusercontent.com/sudo-Atharva/Science-Journal/72a2c2453c29487a01949b07190a5c03e1b61b6e/images/nasa-Yj1M5riCKk4-unsplash.jpg')">
 <div class="relative flex min-h-screen flex-col justify-center overflow-hidden p-6 sm:py-12">
-  <div class="container px-5 py-24 mx-auto bg-opacity-50 backdrop-blur">
+  <div class="container px-5 py-24 mx-auto bg-opacity-25 backdrop-blur">
     <div class="flex flex-wrap w-full mb-20 flex-col items-center text-center">
       <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">Read latest posts related to space &#8595;<br> Or <br>
       <button type="button" class="inline-block px-6 py-2 border-2 border-gray-200 text-gray-200 font-medium text-xs leading-tight uppercase rounded hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out" href="Space/Search.html">Search Space Posts</button></h1>
     </div>
   </div>
 </div>
-<section class="text-gray-400 bg-gray-900 body-font">
+<section class="body-font">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-wrap -m-4">
       <div class="p-4 lg:w-1/3">
-        <div class="h-full bg-gray-800 bg-opacity-40 px-8 pt-16 pb-24 rounded-lg overflow-hidden text-center relative">
+        <div class="h-full bg-opacity-25 backdrop-blur px-8 pt-16 pb-24 rounded-lg overflow-hidden text-center relative">
           <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">SPACE</h2>
           <h1 class="title-font sm:text-2xl text-xl font-medium text-white mb-3">NASA Discovers 5000 Confirmed Exoplanets!</h1>
           <p class="leading-relaxed mb-3">...</p>
@@ -63,6 +63,7 @@
               <path d="M12 5l7 7-7 7"></path>
             </svg>
           </a>
+         </div>
           <div class="text-center mt-2 leading-none flex justify-center absolute bottom-0 left-0 w-full py-4">
             <span class="text-gray-500 mr-3 inline-flex items-center leading-none text-sm pr-3 py-1 border-r-2 border-gray-700 border-opacity-50">
               <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
@@ -79,7 +80,7 @@
         </div>
       </div>
       <div class="p-4 lg:w-1/3">
-        <div class="h-full bg-gray-800 bg-opacity-40 px-8 pt-16 pb-24 rounded-lg overflow-hidden text-center relative">
+        <div class="h-full bg-opacity-25 backdrop-blur px-8 pt-16 pb-24 rounded-lg overflow-hidden text-center relative">
           <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">SPACE</h2>
           <h1 class="title-font sm:text-2xl text-xl font-medium text-white mb-3">Exoplanets an Introduction</h1>
           <p class="leading-relaxed mb-3">...</p>
@@ -101,7 +102,7 @@
         </div>
       </div>
       <div class="p-4 lg:w-1/3">
-        <div class="h-full bg-gray-800 bg-opacity-40 px-8 pt-16 pb-24 rounded-lg overflow-hidden text-center relative">
+        <div class="h-full bg-opacity-25 backdrop-blur px-8 pt-16 pb-24 rounded-lg overflow-hidden text-center relative">
           <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">SPACE</h2>
           <h1 class="title-font sm:text-2xl text-xl font-medium text-white mb-3">Olber's Paradox | Why is the Night Sky Dark?</h1>
           <p class="leading-relaxed mb-3">Why is the Night Sky Dark instead of Bright while other stars are still present? Here, we deal with the Olber's or The Night Sky Paradox...</p>
