--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@ The next-science project, with so much knowledge for amateurs to professionals, 
           </div>
         </div>
       </div>
+      <section class="text-gray-600 body-font">
+  <div class="container px-5 py-24 mx-auto">
+    <div class="lg:w-2/3 flex flex-col sm:flex-row sm:items-center items-start mx-auto">
+      <h1 class="flex-grow sm:pr-16 text-2xl font-medium title-font text-gray-900">Learn More About This Blog...</h1>
+      <button class="flex-shrink-0 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg mt-10 sm:mt-0">Take Me There!</button>
+    </div>
+  </div>
+</section>
     </div>
   </div>
 </section>
