--- a/Physics/index.html
+++ b/Physics/index.html
@@ -49,7 +49,7 @@
     </div>
   </div>
 </div>
-<section class="body-font">
+<section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-wrap -m-4">
       <div class="p-4 lg:w-1/3">
