--- a/Space/index.html
+++ b/Space/index.html
@@ -18,28 +18,7 @@
   <meta name="twitter:image" content="">
   <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-  <style>
-    ::-webkit-scrollbar {
-  width: 12px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  border-radius: 100vh;
-  background: #1f2937;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: linear-gradient(rgb(54, 71, 111), rgb(62, 134, 142), rgb(209, 184, 150), rgb(111, 111, 111));
-  border-bottom-left-radius: 5px;
-  border-top-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px;
-}
-}
-  </style>
-</head>
+  </head>
 <body class="bg-center bg-no-repeat bg-cover bg-fixed" style="background-image: url('https://raw.githubusercontent.com/sudo-Atharva/Science-Journal/72a2c2453c29487a01949b07190a5c03e1b61b6e/images/nasa-Yj1M5riCKk4-unsplash.jpg')">
 <div class="relative flex min-h-screen flex-col justify-center overflow-hidden p-6 sm:py-12">
   <div class="container px-5 py-24 mx-auto bg-opacity-25 backdrop-blur">
@@ -49,64 +28,60 @@
     </div>
   </div>
 </div>
-<section class="body-font">
+<section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-wrap -m-4">
-      <div class="p-4 lg:w-1/3">
-        <div class="h-full bg-opacity-25 backdrop-blur px-8 pt-16 pb-24 rounded-lg overflow-hidden text-center relative">
-          <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">SPACE</h2>
-          <h1 class="title-font sm:text-2xl text-xl font-medium text-white mb-3">NASA Discovers 5000 Confirmed Exoplanets!</h1>
-          <p class="leading-relaxed mb-3">...</p>
-          <a class="text-indigo-400 inline-flex items-center">Read
-            <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M5 12h14"></path>
-              <path d="M12 5l7 7-7 7"></path>
-            </svg>
-          </a>
-         </div>
-        </div>
-      </div>
-      <div class="p-4 lg:w-1/3">
-        <div class="h-full bg-opacity-25 backdrop-blur px-8 pt-16 pb-24 rounded-lg overflow-hidden text-center relative">
-          <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">SPACE</h2>
-          <h1 class="title-font sm:text-2xl text-xl font-medium text-white mb-3">Exoplanets an Introduction</h1>
-          <p class="leading-relaxed mb-3">...</p>
-          <a class="text-indigo-400 inline-flex items-center">Read
-            <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M5 12h14"></path>
-              <path d="M12 5l7 7-7 7"></path>
-            </svg>
-          </a>
-          <div class="text-center mt-2 leading-none flex justify-center absolute bottom-0 left-0 w-full py-4">
-            <a class="inline-flex items-center">
-          <img alt="blog" src="https://dummyimage.com/104x104" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
-          <span class="flex-grow flex flex-col pl-4">
-            <span class="title-font font-medium text-white">Author</span>
-            <span class="text-gray-500 text-xs tracking-widest mt-0.5">Designations</span>
-          </span>
-            </a>
+      <div class="p-4 md:w-1/3">
+        <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/720x400" alt="blog">
+          <div class="p-6">
+            <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The Catalyzer</h1>
+            <p class="leading-relaxed mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+            <div class="flex items-center flex-wrap ">
+              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Learn More
+                <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M5 12h14"></path>
+                  <path d="M12 5l7 7-7 7"></path>
+                </svg>
+              </a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="p-4 lg:w-1/3">
-        <div class="h-full bg-opacity-25 backdrop-blur px-8 pt-16 pb-24 rounded-lg overflow-hidden text-center relative">
-          <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">SPACE</h2>
-          <h1 class="title-font sm:text-2xl text-xl font-medium text-white mb-3">Olber's Paradox | Why is the Night Sky Dark?</h1>
-          <p class="leading-relaxed mb-3">Why is the Night Sky Dark instead of Bright while other stars are still present? Here, we deal with the Olber's or The Night Sky Paradox...</p>
-          <a class="text-indigo-400 inline-flex items-center">Read
-            <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M5 12h14"></path>
-              <path d="M12 5l7 7-7 7"></path>
-            </svg>
-          </a>
-          <div class="text-center mt-2 leading-none flex justify-center absolute bottom-0 left-0 w-full py-4">
-            <a class="inline-flex items-center">
-          <img alt="blog" src="https://dummyimage.com/104x104" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
-          <span class="flex-grow flex flex-col pl-4">
-            <span class="title-font font-medium text-white">Atharva Pandey</span>
-            <span class="text-gray-500 text-xs tracking-widest mt-0.5">CEO, Dev, Designer</span>
-          </span>
-            </a>
+      <div class="p-4 md:w-1/3">
+        <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/721x401" alt="blog">
+          <div class="p-6">
+            <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The 400 Blows</h1>
+            <p class="leading-relaxed mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+            <div class="flex items-center flex-wrap">
+              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Learn More
+                <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M5 12h14"></path>
+                  <path d="M12 5l7 7-7 7"></path>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="p-4 md:w-1/3">
+        <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/722x402" alt="blog">
+          <div class="p-6">
+            <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
+            <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Shooting Stars</h1>
+            <p class="leading-relaxed mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+            <div class="flex items-center flex-wrap ">
+              <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Learn More
+                <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M5 12h14"></path>
+                  <path d="M12 5l7 7-7 7"></path>
+                </svg>
+              </a>
+            </div>
           </div>
         </div>
       </div>
